objects/CMTD__EnhancedRelatedList__mdt.object
<CustomObject>
    <description>Custom Metadata Type object to manage the fields used in CMTD Enhanced Related List lightning component</description>
    <fields>
        <fullName>CMTD__Colour__c</fullName>
        <description>Colour for Badge UI Type Override - only accept HEX</description>
        <inlineHelpText>Colour for Badge UI Type Override - only accept HEX</inlineHelpText>
        <label>Colour</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMTD__Field_API_Name__c</fullName>
        <description>Field API Name of the object as specified in &quot;Object API Name&quot; attribute of the CMTD Enhanced Related List component</description>
        <inlineHelpText>Field API Name of the object as specified in &quot;Object API Name&quot; attribute of the CMTD Enhanced Related List component</inlineHelpText>
        <label>Field API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMTD__Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to display fields in the header section when using Tile display mode.</description>
        <inlineHelpText>Used to display fields in the header section when using Tile display mode.</inlineHelpText>
        <label>Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMTD__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is checked, it will not be used in the CMTD</description>
        <inlineHelpText>Flag to indicate if the CMT record is used. When this field is checked, the CMT record will be ignored and the field will not be displayed in the component.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMTD__Order__c</fullName>
        <description>Sequence to display the fields in the component</description>
        <inlineHelpText>Sequence to display the fields in the component</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMTD__Related_List_Name__c</fullName>
        <description>Related List Name as specified in &quot;Related List Name&quot; attribute of the CMTD Enhanced Related List component</description>
        <inlineHelpText>Related List Name as specified in &quot;Related List Name&quot; attribute of the CMTD Enhanced Related List component</inlineHelpText>
        <label>Related List Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMTD__Target_API_Name__c</fullName>
        <description>When populated, the field value will have a hyperlink (only support Salesforce record id). 
Provide field API Name of the Id of the target record.</description>
        <inlineHelpText>To enable hyperlink, provide field API Name that contains the Id of the target record. (only support Salesforce record id)</inlineHelpText>
        <label>Target API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMTD__UI_Type_Override__c</fullName>
        <description>To override the UI display of the field.
Values: Checkbox, Badge</description>
        <inlineHelpText>To override the UI display of the field.</inlineHelpText>
        <label>UI Type Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Badge</fullName>
                </value>
                <value>
                    <fullName>Unescaped HTML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enhanced Related List</label>
    <listViews>
        <fullName>CMTD__All_Fields</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>CMTD__Related_List_Name__c</columns>
        <columns>CMTD__Field_API_Name__c</columns>
        <columns>CMTD__Header__c</columns>
        <columns>CMTD__Order__c</columns>
        <columns>CMTD__UI_Type_Override__c</columns>
        <columns>CMTD__Colour__c</columns>
        <columns>CMTD__Target_API_Name__c</columns>
        <columns>CMTD__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>Enhanced Related List</pluralLabel>
    <validationRules>
        <fullName>CMTD__Colour_Populated_For_Badge</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( CMTD__Colour__c )) &amp;&amp; NOT(ISPICKVAL( CMTD__UI_Type_Override__c ,&apos;Badge&apos;))</errorConditionFormula>
        <errorMessage>Colour can only be populated for Checkbox Badge UI Type</errorMessage>
    </validationRules>
</CustomObject>